<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MVVM_architecture_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.example.mvvm_architecture_test.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/date_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_column"
                    android:textSize="14sp"
                    android:checked="true"
                    android:enabled="false"
                    android:textColor="@color/lite_grey"
                    app:buttonTint="@color/lite_grey" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/new_cases_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_cases_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_cases_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/cases_variation_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases_variation_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases_variation_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/total_cases_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/total_cases_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cases_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/new_deaths_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_deaths_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_deaths_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/hospitalized_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitalized_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitalized_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/intensive_care_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/intensive_care_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intensive_care_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/total_hospitalized_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_hospitalized_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_hospitalized_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/home_isolation_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_isolation_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_isolation_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/new_healed_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/new_healed_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_healed_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/new_buffers_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_buffers_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_buffers_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/total_positive_molecular_tests_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_positive_molecular_test_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_positive_molecular_test_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/total_positive_rapid_tests_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/total_positive_rapid_test_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_positive_rapid_test_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/total_molecular_tests_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_molecular_test_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_molecular_test_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey"
                    android:layout_margin="10sp"/>

                <CheckBox
                    android:id="@+id/total_rapid_tests_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_rapid_test_column"
                    android:textSize="14sp"
                    app:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_rapid_test_column_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp">
                </TextView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
