<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MVVM_architecture_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.example.mvvm_architecture_test.MainActivity">

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_layout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:tabBackground="@color/dark_grey"
            app:tabIndicatorColor="@color/white"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/lite_grey">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/days_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/weeks_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weeks" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/months_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months" />
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tabs_layout">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:hint="@string/theme"
            android:textColorHint="#000000"
            app:boxBackgroundColor="@color/white"
            app:endIconTint="@color/black">

            <com.example.mvvm_architecture_test.auto_complete_text_view.TextInputDropDownMenu
                android:id="@+id/auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empty"
                android:textColorHint="@color/black"
                android:inputType="none"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
